# ot-harjoitustyo

./: .gitignore  README.md  TODO.md  pyproject.toml  tasks.py
docs/: CHANGES.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: .komentorivi.txt.swp  gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko3/: monopoli.md
src/: index.py
src/ui/: entry_filter.py  grams_per_litre_tab.py  ratio_tab.py  selector.py  ui.py
